--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -2,9 +2,9 @@
 <%= link_to "Create a new Portfolio Item", new_portfolio_url %>
 <% @portfolio_items.each do |portfolio_item| %>
 
-<p><%= portfolio_item.title %></p>
+<p><%= link_to portfolio_item.title,portfolio_path(portfolio_item.id)  %></p>
 <p><%= portfolio_item.subtitle %></p>
 <p><%= portfolio_item.body %></p>
 <%= image_tag portfolio_item.thumb_image %>
-<%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
+
 <% end %>
