--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -2,3 +2,7 @@
 <h1><%= @portfolio_items.title %></h1>
 <em><%= @portfolio_items.subtitle %></em>
 <p><%= @portfolio_items.body %></p>
+<h2> Technology Used </h2>
+<% @portfolio_items.technologies.each do |t| %>
+<p><%= t.name %></p>
+<% end %>
