--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
   <meta name="keywords" content=<%= @seo_keywords %> />
 </head>
-<body>
+<body class="sach">
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
