partials with data

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,14 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  
   <meta name="keywords" content=<%= @seo_keywords %> />
 </head>
-<body>
+<body >
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
 
-<%= render "shared/nav" %>
+<%= render "shared/nav", location: 'top' %>
 
 
 <% if current_user.is_a?(User) %>
