--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -21,6 +21,6 @@
 <%= link_to "Login", new_user_session_path %>
 <% end %>
 <%= yield %>
-<%= render "shared/nav" %>
+<%= render "shared/nav", location: 'bottom' %>
 </body>
 </html>
