--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -15,6 +15,8 @@
 
 <%= login_helper %>
 <%= yield %>
+
 <%= render "shared/nav", location: 'bottom' %>
+<%= source_helper("blog") %>
 </body>
 </html>
