--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,11 +1,6 @@
 <h1>Portfolio Items</h1>
 <%= link_to "Create a new Portfolio Item", new_portfolio_url %>
-<% @portfolio_items.each do |portfolio_item| %>
+<%= render partial: 'portfolio_item', collection: @portfolio_items %>
 
-<p><%= link_to portfolio_item.title,portfolio_show_path(portfolio_item.id)  %></p>
-<p><%= portfolio_item.subtitle %></p>
-<p><%= portfolio_item.body %></p>
-<%= image_tag portfolio_item.thumb_image %>
-<%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
-<%= link_to "Delete Portfolio Item", portfolio_path(portfolio_item), method: :delete, data: {confirm: 'Are you Sure?'} %>
-<% end %>
+
+
