--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,6 @@
 <h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<p><%= number_to_phone "9791649383" %></p>
+<p><%= number_to_currency "150" %></p>
+<p><%= number_to_percentage "84.5" %></p>
+<p><%= number_with_delimiter "9791649383" %></p>
+
