--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -15,7 +15,7 @@
 
 <%= login_helper %>
 <%= yield %>
-
+<%= @copyright%>
 <%= render "shared/nav", location: 'bottom' %>
 <%= source_helper("blog") %>
 </body>
